--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
                 <span class="btn-text">Logout</span>
             </button>
         </div>
-
-        <!-- KONTROL DIRAPIKAN -->
+        
         <div class="controls card">
-            <div class="input-group date-picker-group">
+            <div class="date-picker-group">
                 <label for="date-picker">Pilih Tanggal Absensi</label>
                 <input type="date" id="date-picker">
             </div>
@@ -76,10 +75,10 @@
     <script src="script.js"></script>
     <script>
       // Inisialisasi Feather Icons
-    function initializeFeatherIcons() {
-        feather.replace();
-    }
-    document.addEventListener('DOMContentLoaded', initializeFeatherIcons);
+      function initializeFeatherIcons() {
+          feather.replace();
+      }
+      document.addEventListener('DOMContentLoaded', initializeFeatherIcons);
     </script>
 </body>
 </html>
