--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="app-container" style="display: none;">
         <div class="header">
             <div>
-                <h1>Absensi Nominatif</h1>
+                <h1>Absensi Nominatif Angkatan VIII</h1>
                 <div id="clock" class="clock"></div>
             </div>
             <button id="logout-button" class="btn btn-danger">
@@ -82,4 +82,5 @@
     </script>
 </body>
 </html>
+
 
